XB-699: Technical Debt : PMD checkstyle code changes : XPEDXComputeImposition.java, XPEDXCustomerAssignmentAction.java, XPEDXGetCustLocationList.java, XPEDXGetCustomerOrganizationAction.java, XPEDXPreviewLogoHeaderAction.java, XPEDXSaveCustomerInfo.java, XPEDXShowLocations.java
----------------------------------- StarTeam -----------------------------------
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXComputeImposition.java:1.3.1.2
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXCustomerAssignmentAction.java:1.22.1.3
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXGetCustLocationList.java:1.3.1.3
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXGetCustomerOrganizationAction.java:1.3.1.3
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXPreviewLogoHeaderAction.java:1.4.1.2
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXSaveCustomerInfo.java:1.4.1.3
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXShowLocations.java:1.7.1.2
--------------------------------------------------------------------------------